# claude-workflow

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  install.sh  uninstall.sh
.claude-plugin/: plugin.json
.githooks/: commit-msg  pre-push
docs/: README.md  architecture.md  coverage-matrix.md  status.md
docs/decisions/: 0001-self-application.md  0002-documentation-first.md  0003-default-branch-main.md  0004-orchestrator-as-skill.md  README.md
docs/design/: README.md
docs/domain/: README.md
docs/plans/: README.md  (+1 more)
scripts/: doctor.sh  eol-check.sh  find-workflow-home.sh  install-git-hooks.sh  scaffold.sh  settings-merge.py  test-install.sh  test-templates.sh
templates/python-cli/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  renovate.json
templates/python-cli/.githooks/: pre-commit
templates/python-cli/.github/workflows/: ci.yml
templates/python-cli/docs/: README.md  architecture.md
templates/python-cli/docs/domain/: README.md
templates/python-cli/docs/handoffs/: README.md
templates/python-cli/src/__package__/: app.py  config.py  constants.py
templates/python-cli/src/__package__/commands/: hello.py  version.py
templates/python-cli/src/__package__/core/: greeting.py
templates/python-cli/tests/: conftest.py
templates/python-cli/tests/integration/: test_cli.py
templates/python-cli/tests/unit/: test_greeting.py
templates/python-fastapi/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  renovate.json
templates/python-fastapi/.github/workflows/: ci.yml
templates/python-fastapi/docs/: README.md  architecture.md  status.md
templates/python-fastapi/docs/domain/: README.md
templates/python-fastapi/migrations/: env.py
templates/python-fastapi/src/__package__/: main.py
templates/python-fastapi/src/__package__/api/: error_handlers.py
templates/python-fastapi/src/__package__/api/schemas/: user.py
templates/python-fastapi/src/__package__/api/v1/: __init__.py  deps.py
templates/python-fastapi/src/__package__/api/v1/routes/: health.py  users.py
templates/python-fastapi/src/__package__/application/users/: create_user.py
templates/python-fastapi/src/__package__/core/: config.py  logging.py  observability.py
templates/python-fastapi/src/__package__/domain/: exceptions.py
templates/python-fastapi/src/__package__/domain/entities/: user.py
templates/python-fastapi/src/__package__/domain/repositories/: user_repository.py
templates/python-fastapi/src/__package__/infrastructure/db/: base.py  session.py
templates/python-fastapi/src/__package__/infrastructure/db/models/: __init__.py  user.py
templates/python-fastapi/src/__package__/infrastructure/db/repositories/: user_repository.py
templates/python-fastapi/tests/: conftest.py
templates/python-fastapi/tests/e2e/: test_health.py
templates/python-fastapi/tests/integration/: test_user_repository.py
templates/python-fastapi/tests/unit/: test_create_user.py
(+171 files in other folders)
