[project]
name = "__project_kebab__"
version = "0.1.0"
description = "__description__"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "structlog>=24.4",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/__package__"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "factory-boy>=3.3",
    "testcontainers[postgres]>=4.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
# Note: TCH rules excluded — FastAPI/SQLAlchemy/Pydantic require runtime type info
# for dependency injection, ORM mapping, and validation. Moving these into
# TYPE_CHECKING blocks would break the frameworks.
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"tests/**" = []

[tool.ruff.lint.isort]
known-first-party = ["__package__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests (no DB, no network)",
    "integration: tests requiring docker/testcontainers",
    "e2e: full-stack tests via httpx TestClient",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
